# ssz-hs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ssz-hs.cabal
src/: Common.hs  Decode.hs  Derive.hs  Encode.hs  Encoder.hs  PrimitiveTypes.hs  Ssz.hs
test/: Test.hs  TestTypes.hs
